# pdfium

./: .gitignore  .gn  AUTHORS  BUILD.gn  DEPS  PRESUBMIT.py  README.md  main.star  pdfium.gni  unsafe_buffers_paths.txt
build_overrides/: build.gni  crubit.gni  partition_alloc.gni  pdfium.gni
constants/: BUILD.gn  access_permissions.h  annotation_common.h  annotation_flags.h  ascii.h  catalog.h  form_flags.h  page_object.h  stream_dict_common.h  transparency.h
core/: README.md
core/fdrm/: fx_crypt_sha.cpp  fx_crypt_unittest.cpp
core/fpdfapi/: README.md
core/fpdfdoc/: BUILD.gn  cpdf_annot.cpp  cpdf_annot.h  cpdf_annotlist.cpp  cpdf_apsettings.cpp  cpdf_apsettings.h  cpdf_bafontmap.cpp  cpdf_bafontmap_unittest.cpp  cpdf_bookmark.cpp  cpdf_bookmark.h  cpdf_bookmarktree.cpp  cpdf_color_utils.cpp  cpdf_defaultappearance.cpp  cpdf_filespec.cpp  cpdf_filespec.h  cpdf_formcontrol.cpp  cpdf_formcontrol.h  cpdf_formfield.h  cpdf_formfield_unittest.cpp  cpdf_generateap.cpp  cpdf_interactiveform.cpp  cpdf_interactiveform_unittest.cpp  cpdf_nametree.cpp  cpdf_nametree_unittest.cpp  cpdf_pagelabel.cpp  cpdf_pagelabel_unittest.cpp  cpdf_structelement.cpp  cpdf_structelement.h  cpdf_viewerpreferences.cpp  cpvt_lineinfo.h  cpvt_section.cpp  cpvt_section.h  cpvt_section_unittest.cpp  cpvt_stub_provider.cpp  cpvt_stub_provider.h  cpvt_variabletext.cpp  cpvt_variabletext.h  cpvt_variabletext_unittest.cpp  cpvt_word.cpp  cpvt_word.h  (+2 more)
core/fpdftext/: cpdf_textpage.cpp  cpdf_textpage.h
core/fxcodec/: BUILD.gn  DEPS  codec_memory_sk_stream.cpp  codec_memory_sk_stream.h  codec_memory_sk_stream_unittest.cpp  fx_codec.cpp  fx_codec.h  progressive_decoder.cpp  progressive_decoder.h  progressive_decoder_unittest.cpp
core/fxcodec/bmp/: bmp_decoder.cpp  bmp_decoder.h  bmp_decoder_delegate.h  cfx_bmpcontext.cpp  cfx_bmpcontext.h  cfx_bmpdecompressor.cpp
core/fxcodec/brotli/: DEPS  brotli_decoder.cpp  brotli_decoder.h  brotli_embeddertest.cpp
core/fxcodec/fax/: faxmodule.cpp  faxmodule.h
core/fxcodec/flate/: flatemodule.cpp
core/fxcodec/gif/: cfx_gif.h  cfx_gifcontext.cpp  cfx_gifcontext.h  lzw_decompressor.cpp  lzw_decompressor.h
core/fxcodec/icc/: icc_transform.cpp  icc_transform.h
core/fxcodec/jbig2/: JBig2_BitStream.cpp  JBig2_BitStream.h  JBig2_Context.cpp  JBig2_GrdProc.cpp  JBig2_GrdProc.h  JBig2_GrrdProc.cpp  JBig2_GrrdProc.h  JBig2_HtrdProc.cpp  JBig2_HuffmanTable.cpp  JBig2_Image.cpp  JBig2_Image.h  JBig2_Image_unittest.cpp  JBig2_PddProc.cpp  JBig2_SddProc.cpp  JBig2_SymbolDict.cpp  JBig2_SymbolDict.h  JBig2_TrdProc.cpp  JBig2_TrdProc.h  jbig2_arith_decoder.h  jbig2_context.cpp  jbig2_context.h  jbig2_embeddertest.cpp  jbig2_grd_proc.cpp  jbig2_grd_proc.h  jbig2_image.cpp  jbig2_image.h
core/fxcodec/jpeg/: jpegmodule.cpp  jpegmodule.h
core/fxcodec/jpx/: cjpx_decoder.cpp
core/fxcodec/png/: libpng_png_decoder.cpp  png_decoder_delegate.h  skia_png_decoder.cpp
core/fxcrt/: BUILD.gn  bytestring.cpp  bytestring_pool.cpp  bytestring_pool.h  fx_bidi.h  (+65 more)
fpdfsdk/: cpdfsdk_appstream.cpp  cpdfsdk_baannot.cpp  cpdfsdk_formfillenvironment.cpp  cpdfsdk_formfillenvironment.h  cpdfsdk_helpers.cpp  cpdfsdk_helpers.h  cpdfsdk_helpers_unittest.cpp  cpdfsdk_interactiveform.cpp  cpdfsdk_renderpage.cpp  cpdfsdk_widget.cpp  fpdf_annot.cpp  fpdf_annot_embeddertest.cpp  fpdf_attachment.cpp  fpdf_attachment_embeddertest.cpp  fpdf_catalog.cpp  fpdf_catalog_embeddertest.cpp  fpdf_catalog_unittest.cpp  fpdf_doc.cpp  fpdf_doc_embeddertest.cpp  fpdf_doc_unittest.cpp  fpdf_edit_embeddertest.cpp  fpdf_edit_unittest.cpp  fpdf_editimg.cpp  fpdf_editimg_embeddertest.cpp  fpdf_editpage.cpp  fpdf_editpage_embeddertest.cpp  fpdf_editpath_embeddertest.cpp  fpdf_edittext.cpp  fpdf_flatten.cpp  fpdf_flatten_embeddertest.cpp  fpdf_formfill.cpp  fpdf_formfill_embeddertest.cpp  fpdf_ppo.cpp  fpdf_ppo_embeddertest.cpp  fpdf_progressive.cpp  fpdf_save.cpp  fpdf_save_embeddertest.cpp  fpdf_signature.cpp  fpdf_structtree.cpp  fpdf_structtree_embeddertest.cpp  (+8 more)
fxbarcode/: BC_TwoDimWriter.cpp  BC_TwoDimWriter.h  BC_Writer.h  cbc_datamatrix.cpp  cbc_pdf417i.cpp  cbc_qrcode.cpp  cfx_barcode.cpp  cfx_barcode.h  cfx_barcode_unittest.cpp
fxjs/: BUILD.gn  cfx_isolate_wrapper.cpp  cfx_isolate_wrapper.h  cfx_isolate_wrapper_unittest.cpp  cfx_v8.cpp  cfx_v8.h  cfx_v8_array_buffer_allocator.cpp  cfx_v8_array_buffer_allocator.h  cfx_v8_unittest.cpp  cfxjs_engine.cpp  cfxjs_engine.h  cfxjs_engine_embeddertest.cpp  cjs_annot.cpp  cjs_app.cpp  cjs_color.cpp  cjs_document.cpp  cjs_event.cpp  cjs_event_context.h  cjs_field.cpp  cjs_global.cpp  cjs_global.h  cjs_publicmethods.cpp  cjs_publicmethods_embeddertest.cpp  cjs_runtime.cpp  cjs_util.cpp  fxv8.h  js_define.cpp  js_define.h
public/: fpdf_attachment.h  fpdf_catalog.h  fpdf_edit.h  fpdf_save.h  fpdfview.h
skia/: BUILD.gn
testing/: BUILD.gn  DEPS  SUPPRESSIONS  SUPPRESSIONS_EXACT_MATCHING  allocator_shim_config.cpp  embedder_test.cpp  embedder_test.h  embedder_test_constants.cpp  embedder_test_constants.h  embedder_test_environment.cpp  embedder_test_environment.h  embedder_test_main.cpp  fx_string_testhelpers.cpp  fxv8_unittest.h  pdf_test_environment.cpp  pdfium_test.cc  temporary_file_test.cpp  temporary_file_test.h  test_fonts.cpp  test_fonts.h  test_loader.cpp  unit_test_main.cpp  v8_initializer.cpp  v8_test_environment.h  xfa_js_embedder_test.cpp  xfa_js_embedder_test.h
tools/: roll_pdfium_deps.py  roll_pdfium_deps_test.py
(+550 files in other folders)
